<resources>
    <string name="app_name">Weather</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_weather_tab">WeatherTabActivity</string>

    <string name="hello_world">Hello world!</string>


    <string name="format12Hour">hh:mm:ss aa</string>
    <string name="format24Hour">kk:mm:ss</string>
    <string name="dateformat">MMM dd, yyyy</string>
    <string name="fulltime">yyyy/MM/dd</string>
    <string name="percentage">%</string>
    <string name="celsiodegreeSimbol">°C</string>
    <string name="degreeSimbol">°</string>

    <string name="refresh">↺</string>
    <string name="labelToday">Today</string>
    <string name="cityCountry">Ciy, Country</string>
    <string name="icon">&#xf014;</string>
    <string name="weatherDesc">Weather</string>
    <string name="weatherMain">Wheater</string>
    <string name="temp">20 °C</string>
    <string name="maxMinTemp">18 °C / 20 °C</string>
    <string name="humidity">Humidity</string>
    <string name="windspeed">Wind speed</string>
    <string name="sealevel">Sea level</string>
    <string name="humiditydefualtvalue">80 %</string>
    <string name="windspeeddefualtvalue">20 KM/H</string>
    <string name="sealeveldefualtvalue">1000</string>
    <string name="title_activity_weather_history_tab">WeatherHistoryTabActivity</string>



    <string name="ws_lat_lon">http://api.openweathermap.org/data/2.5/weather?lat=p_lat.lon=p_lon</string>
    <string name="title_activity_weather_list">WeatherListActivity</string>
    <string name="wh_find">Find</string>
    <string name="FilterByCity">Enter the city name to filter the list</string>


    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>

</resources>
