<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="weather_finaltest.centaurosolutions.com.weather.WeatherTabActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextClock
            android:id="@+id/w_tc_hour"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="@dimen/bigest_font"
            android:format24Hour="@string/format24Hour"
            android:format12Hour="@string/format12Hour"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/w_tv_today"
            android:layout_width="fill_parent"
            android:text="@string/labelToday"
            android:textColor="@color/white"
            android:layout_height="0dp"
            android:textSize="@dimen/big_font"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/w_tv_citycountry"
            android:layout_width="fill_parent"
            android:text="@string/cityCountry"
            android:textColor="@color/white"
            android:textSize="@dimen/med_font"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextClock
            android:id="@+id/w_tv_currentdate"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:textColor="@color/white"
            android:textSize="@dimen/med_font"
            android:layout_weight="1"
            android:format24Hour="@string/dateformat"
            android:format12Hour="@string/dateformat"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/w_tv_icon"
                android:text="@string/icon"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/big_icon"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/w_tv_weatherDesc"
                android:text="@string/weatherDesc"
                android:textColor="@color/white"
                android:layout_width="fill_parent"
                android:gravity="right"
                android:textSize="@dimen/big_font"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/w_tv_weatherMain"
                android:text="@string/weatherMain"
                android:layout_width="fill_parent"
                android:textColor="@color/white"
                android:gravity="right"
                android:textSize="@dimen/med_font"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/w_tv_temp"
                android:textColor="@color/white"
                android:text="@string/temp"
                android:gravity="right"
                android:textSize="@dimen/big_font"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/w_tv_tempMinMax"
                android:textColor="@color/white"
                android:text="@string/maxMinTemp"
                android:gravity="right"
                android:textSize="@dimen/med_font"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:text="@string/humidity"
                android:layout_width="fill_parent"
                android:textColor="@color/white"
                android:layout_height="0dp"
                android:gravity="bottom"
                android:textSize="@dimen/med_font"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/w_tv_humidity"
                android:textColor="@color/white"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:gravity="top"
                android:text="@string/humiditydefualtvalue"
                android:textSize="@dimen/med_font"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:text="@string/windspeed"
                android:textColor="@color/white"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:gravity="bottom"
                android:textSize="@dimen/med_font"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/w_tv_windspeed"
                android:textColor="@color/white"
                android:layout_width="fill_parent"
                android:text="@string/windspeeddefualtvalue"
                android:layout_height="0dp"
                android:gravity="top"
                android:textSize="@dimen/med_font"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:text="@string/sealevel"
                android:layout_width="fill_parent"
                android:textColor="@color/white"
                android:layout_height="0dp"
                android:gravity="bottom"
                android:textSize="@dimen/med_font"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/w_tv_sealevel"
                android:text="@string/sealeveldefualtvalue"
                android:layout_width="fill_parent"
                android:textColor="@color/white"
                android:layout_height="0dp"
                android:gravity="top"
                android:textSize="@dimen/med_font"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>
